gitmodules should use https

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "r_helpers"]
 	path = r_helpers
-	url = git@github.com:tdresser/r_helpers.git
+	url = https://github.com/tdresser/r_helpers.git
